add features about 1 day 1 diary
