# docs/API_spec.yaml
@@ -1921,6 +1921,8 @@ paths:
 
         Access token이 유효하지 않을 경우 401 코드를 리턴합니다. 이 경우 access token을 재발급 받아야 합니다.
 
+        오늘 작성한 일기가 이미 있다면 409 코드를 리턴합니다.
+
         그 이외의 경우 500 코드를 리턴합니다.
 
       security:
@@ -1957,6 +1959,15 @@ paths:
                   - $ref: '#/components/schemas/Message'
                 example:
                   message: 'The access token is invalid or expired'
+        '409':
+          description: 같은 날 작성한 일기가 이미 존재함.
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Message'
+                example:
+                  message: 'Already posted diary today'        
 
         '500':
           description: 내부 서버 에러
@@ -2552,6 +2563,10 @@ paths:
         - diary
       summary: 작성한 일기 목록 조회
       description: |
+
+        ?page=(페이지번호,기본값:1)&limit=(가져올row수, 기본값:5)
+
+
         일기 목록 조회에 성공한 경우 200코드와 일기 목록을 리턴합니다.
 
         Access token이 유효하지 않을 경우 401 코드를 리턴합니다. 이 경우 access token을 재발급 받아야 합니다.
@@ -2559,6 +2574,9 @@ paths:
         그 이외의 경우 500 코드를 리턴합니다.
       security:
         - BearerAuth: []
+      parameters:
+        - $ref: '#/components/parameters/Page'
+        - $ref: '#/components/parameters/Limit'
       responses:
         '200':
           description: 내 일기 목록 조회
@@ -2911,6 +2929,48 @@ paths:
                   - $ref: '#/components/schemas/Message'
                 example:
                   message: 'There is something wrong with the server'
+  
+  /api/diaries/today:
+    get:
+      tags:
+        - diary
+      summary: 오늘의 일기 작성 여부 조회
+      description: |
+      
+        오늘의 일기 작성 여부 조회에 성공한 경우 200코드와 정보를 리턴합니다.
+
+        Access token이 유효하지 않을 경우 401 코드를 리턴합니다. 이 경우 access token을 재발급 받아야 합니다.
+
+        그 이외의 경우 500 코드를 리턴합니다.
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: 오늘의 일기 작성 여부
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HasPosts'
+
+        '401':
+          description: Access token이 유효하지 않거나 만료됨
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Message'
+                example:
+                  message: 'The access token is invalid or expired'
+
+        '500':
+          description: 내부 서버 에러
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Message'
+                example:
+                  message: 'There is something wrong with the server'
   /api/weather:
     get:
       tags:
@@ -2987,7 +3047,7 @@ paths:
         - $ref: '#/components/parameters/Limit'
       responses:
         '200':
-          description: 일기 음악 정보
+          description: 일기 플레이리스트 정보
           content:
             application/json:
               schema:
@@ -2995,6 +3055,10 @@ paths:
                 properties:
                   user_profile:
                     $ref: '#/components/schemas/ProfileInfo'
+                  total_count:
+                    type: integer
+                    example: 55  
+                    description: 플레이리스트 총 갯수                  
                   musics:
                     type: array
                     items:
@@ -3002,6 +3066,7 @@ paths:
                         - $ref: '#/components/schemas/MusicInfo'
                         - type: object
                           properties:
+
                             created_at:
                               type: string
                               format: date
